kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: onlineeventbookinghuzaifanasir
  labels:
    app: event-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
      - name: event-service
        image: 22i1053/event-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: onlineeventbookinghuzaifanasir
spec:
  selector:
    app: event-service
  ports:
  - port: 5001
    targetPort: 5001
  type: ClusterIP
